booking and selection

--- a/css/style.css
+++ b/css/style.css
@@ -8,5 +8,25 @@ body{
 
 }
 
+/* Booking Section CSS*/
+
+
+
+/* SELECTION PAGE  */
+.selection{
+    background: url("../assets/selection.jpg");
+    height: 75vh;
+    width: 100vw;
+}
+.book-button{
+   background-color: #82C232;
+   color: white;  
+}
+.book-button:hover, .register-button:hover{
+    color: white;
+    width: 8vw;
+}
+/* SELECTION PAGE  */
+
 
 
