--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,17 @@ body{
     width: 100%;
 
 }
+.banner{
+    background-image: url(../assets/about-us.jpg);
+    background-size: cover;
+    height: 100vh;
+}
+.rectangle{
+    height: 80vh;
+    width: 50vh;
+    background-color: rgba(255, 255, 255, 0.5);
+    color: seagreen;
+}
 
 
 
