add the home page section to the html body, style the home page background

--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,12 @@ body{
     margin: 0;
     padding: 0;
     width: 100%;
-
+    background-color: rgb(23, 24, 22);
 }
 
-
+/*HOME PAGE SECTION*/
+.home {
+    background-color:#222629;
+    
+}
 
