--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body{
     margin: 0;
     padding: 0;
     width: 100%;
-    background-color:#222629;
+    background-color:#191a1c;
 }
 
 /*HOME PAGE SECTION*/
@@ -20,12 +20,24 @@ body{
 
 .title1 {
     position: absolute;
-    left: 22vw;
+    left: 28vw;
     text-align: center;
     font-style: normal;
     font-weight: 300;
-    font-size: 55px;
+    font-size: 45px;
     line-height: 60px;
+    color: #FFFFFF;
+}
+
+.description {
+    position: absolute;
+    top: 50vh;
+    left: 12vw;
+    text-align: center;
+    font-style:normal;
+    font-weight: 200;
+    font-size: 35px;
+    line-height: 40px;
     color: #FFFFFF;
 }
 
