--- a/css/style.css
+++ b/css/style.css
@@ -28,4 +28,95 @@ body{
 }
 
 
+/*LAPTOP SIGNUP  */
+.height {
+    height: 100vh
+}
+
+.card {
+    border: none;
+    padding: 20px;
+    background-color: #222629;
+    color: #fff
+}
+
+.circle {
+    height: 20px;
+    width: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #82C232;
+    color: #fff;
+    font-size: 10px;
+    border-radius: 50%
+}
+
+.input {
+    position: relative;
+    margin-bottom: 10px;
+    margin-top: 10px
+}
+
+.input i {
+    position: absolute;
+    font-size: 18px;
+    top: 15px;
+    left: 10px
+}
+
+.input-control {
+    height: 50px;
+    background-color: #1c1e21;
+    text-indent: 24px;
+    font-size: 15px
+}
+
+.input-control:focus {
+    background-color: #25272a;
+    box-shadow: none;
+    color: #fff;
+    border-color: #82C232
+}
+
+.check-label{
+    margin-top: 2px;
+    font-size: 14px
+}
+.check-label a{
+    text-decoration: none;
+    color: #82C232;
+}
+.check-label a:hover{
+    color: blue;
+}
+.signup {
+    height: 50px;
+    font-size: 14px;
+    background-color: #82C232;
+    border-color: #82C232;
+}
+
+.social {
+    height: 50px;
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #eee;
+    border-radius: 50%;
+    margin-right: 10px;
+    cursor: pointer
+}
+
+.social:hover {
+    background-color: #82C232;
+    border-color: #82C232
+}
+.login-link{
+    color: #82C232;
+    text-decoration: none;
+}
+
+
 
