--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,11 @@ body{
 
 .title1 {
     position: absolute;
-    left: 28vw;
+    left: 30vw;
     text-align: center;
     font-style: normal;
     font-weight: 300;
-    font-size: 45px;
+    font-size: 40px;
     line-height: 60px;
     color: #FFFFFF;
 }
@@ -35,11 +35,25 @@ body{
     left: 12vw;
     text-align: center;
     font-style:normal;
-    font-weight: 200;
+    font-weight: 80;
     font-size: 35px;
     line-height: 40px;
     color: #FFFFFF;
 }
 
+.scroll {
+    position: absolute;
+    top: 85vh;
+    left: 52vw;
+    text-align: center;
+    font-style:normal;
+    font-weight: 120;
+    font-size: 20px;
+    font-stretch: narrower;
+    line-height: 30px;
+    color: #FFFFFF;
+}
 
-
+.fa-solid {
+    color: #82C232  ;
+}
