--- a/css/style.css
+++ b/css/style.css
@@ -8,25 +8,243 @@ body{
 
 }
 
-/* Booking Section CSS*/
 
-
-
-/* SELECTION PAGE  */
-.selection{
-    background: url("../assets/selection.jpg");
-    height: 75vh;
-    width: 100vw;
-}
+/* SELECTION PAGE */
 .book-button{
    background-color: #82C232;
    color: white;  
 }
 .book-button:hover, .register-button:hover{
     color: white;
-    width: 8vw;
+    width: 10vw;
 }
-/* SELECTION PAGE  */
+
+/*BOOKING PAGE */
+.locationsBtn{
+    display: none;
+}
+.locationsBtnShow{
+    display: block;
+}
+
+
+/*LAPTOP SIGNUP  */
+.height {
+    height: 100vh
+}
+
+.card {
+    border: none;
+    padding: 20px;
+    background-color: #222629;
+    color: #fff
+}
+
+.circle {
+    height: 20px;
+    width: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #82C232;
+    color: #fff;
+    font-size: 10px;
+    border-radius: 50%
+}
+
+.input {
+    position: relative;
+    margin-bottom: 10px;
+    margin-top: 10px
+}
+
+.input i {
+    position: absolute;
+    font-size: 18px;
+    top: 15px;
+    left: 10px
+}
+
+.input-control {
+    height: 50px;
+    background-color: #1c1e21;
+    text-indent: 24px;
+    font-size: 15px
+}
+
+.input-control:focus {
+    background-color: #25272a;
+    box-shadow: none;
+    color: #fff;
+    border-color: #82C232
+}
+
+.check-label{
+    margin-top: 2px;
+    font-size: 14px
+}
+.check-label a{
+    text-decoration: none;
+    color: #82C232;
+}
+.check-label a:hover{
+    color: blue;
+}
+.signup {
+    height: 50px;
+    font-size: 14px;
+    background-color: #82C232;
+    border-color: #82C232;
+}
+
+.social {
+    height: 50px;
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #eee;
+    border-radius: 50%;
+    margin-right: 10px;
+    cursor: pointer
+}
+
+.social:hover {
+    background-color: #82C232;
+    border-color: #82C232
+}
+.login-link{
+    color: #82C232;
+    text-decoration: none;
+}
+
+
+/*Footer Section*/
+#footer {
+    background: #404040;
+    padding: 0 0 30px 0;
+    color: #fff;
+    font-size: 14px
+}
+#footer .footer-top {
+    background: #3b3b3b;
+    border-top: 1px solid #474747;
+    border-bottom: 1px solid #474747;
+    padding: 60px 0 30px 0
+}
+
+#footer .footer-top .footer-info {
+    margin-bottom: 30px
+}
+
+#footer .footer-top .footer-info h3 {
+    font-size: 18px;
+    margin: 0 0 20px 0;
+    padding: 2px 0 2px 0;
+    line-height: 1;
+    font-weight: 700
+}
+
+#footer .footer-top .footer-info p {
+    font-size: 14px;
+    line-height: 24px;
+    margin-bottom: 0;
+    color: #fff
+}
+
+#footer .footer-top .social-links a {
+    font-size: 18px;
+    display: inline-block;
+    background: #545454;
+    color: #fff;
+    line-height: 1;
+    padding: 8px 0;
+    margin-right: 4px;
+    border-radius: 50%;
+    text-align: center;
+    width: 36px;
+    height: 36px;
+    transition: 0.3s
+}
+
+#footer .footer-top .social-links a:hover {
+    background: #82C232;
+    color: #fff;
+    text-decoration: none
+}
+
+#footer .footer-top h4 {
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff;
+    text-transform: uppercase;
+    position: relative;
+    padding-bottom: 12px
+}
+
+#footer .footer-top .footer-links {
+    margin-bottom: 30px
+}
+
+#footer .footer-top .footer-links ul {
+    list-style: none;
+    padding: 0;
+    margin: 0
+}
+
+#footer .footer-top .footer-links ul i {
+    padding-right: 2px;
+    color: #82C232;
+    font-size: 10px;
+    line-height: 1
+}
+
+#footer .footer-top .footer-links ul li {
+    padding: 10px 0;
+    display: flex;
+    align-items: center
+}
+
+#footer .footer-top .footer-links ul li:first-child {
+    padding-top: 0
+}
+
+#footer .footer-top .footer-links ul a {
+    color: #fff;
+    transition: 0.3s;
+    display: inline-block;
+    line-height: 1
+}
+
+#footer .footer-top .footer-links ul a:hover {
+    color: blue
+}
+
+#footer .footer-top .footer-contact {
+    margin-bottom: 30px
+}
+
+#footer .footer-top .footer-contact p {
+    line-height: 26px
+}
+
+#footer .copyright {
+    text-align: center;
+    padding-top: 30px
+}
+
+#footer .credits {
+    padding-top: 10px;
+    text-align: center;
+    font-size: 13px;
+    color: #fff
+}
+.credits a{
+    color: #82C232;
+}
+#footer a:hover{
+    color: blue;
+}
 
 
 
