style:content-alignment

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body{
     margin: 0;
     padding: 0;
     width: 100%;
+    overflow-x: hidden;
 
 }
 .banner{
@@ -24,6 +25,17 @@ body{
 }
 .about-text{
     display: none;
+}
+.team{
+    width: 50%;
+    margin: auto;
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.team h2{
+
 }
 
 
