--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body{
 }
 .book-button:hover, .register-button:hover{
     color: white;
-    width: 10vw;
+    font-size: 21px;
 }
 
 /*BOOKING PAGE */
@@ -157,7 +157,7 @@ input[type="date"] {
    border-color: #82C232;
 }
 .wrapper .date-submit:hover{
-    width: 53vw;
+    font-size: 17px;
 }
 
 .margin {
@@ -182,7 +182,6 @@ input[type="date"] {
 .height {
     height: 100vh
 }
-
 .card {
     border: none;
     padding: 20px;
@@ -207,14 +206,12 @@ input[type="date"] {
     margin-bottom: 10px;
     margin-top: 10px
 }
-
 .input i {
     position: absolute;
     font-size: 18px;
     top: 15px;
     left: 10px
 }
-
 .input-control {
     height: 50px;
     background-color: #1c1e21;
@@ -238,7 +235,7 @@ input[type="date"] {
     color: #82C232;
 }
 .check-label a:hover{
-    color: blue;
+    font-size: 15px;
 }
 .signup {
     height: 50px;
@@ -246,6 +243,12 @@ input[type="date"] {
     background-color: #82C232;
     border-color: #82C232;
 }
+.signup:hover{
+    font-size: 15px;
+    background-color: #82C232;
+    border-color: #82C232;
+}
+
 
 .social {
     height: 50px;
@@ -261,12 +264,18 @@ input[type="date"] {
 
 .social:hover {
     background-color: #82C232;
-    border-color: #82C232
+    border-color: #82C232;
 }
 .login-link{
     color: #82C232;
     text-decoration: none;
 }
+.login-link:hover{
+    color: #82C232;
+    font-size: 17px;
+}
+
+
 
 
 /*Footer Section*/
