--- a/css/style.css
+++ b/css/style.css
@@ -20,10 +20,10 @@ body{
 }
 
 /*BOOKING PAGE */
-.locationsBtn{
+.location-btn{
     display: none;
 }
-.locationsBtnShow{
+.location-btn-show{
     display: block;
 }
 .wrapper {
@@ -177,6 +177,7 @@ input[type="date"] {
         margin: .2rem 0rem
     }
 }
+.locationsBtn
 
 /*LAPTOP SIGNUP  */
 .height {
