--- a/css/style.css
+++ b/css/style.css
@@ -57,3 +57,17 @@ body{
 .fa-solid {
     color: #82C232  ;
 }
+
+.button button{
+    position: absolute;
+    bottom: 30px;
+    left: 80vw;
+    background-color: #82C232;
+    color: white;
+    border: none;
+    width: 180px;
+    height: 40px;
+    border-radius: 10px;
+    padding: 10px;
+
+}
