--- a/css/style.css
+++ b/css/style.css
@@ -17,14 +17,22 @@ body{
     height: 80vh;
     width: 50vh;
     background-color: rgba(255, 255, 255, 0.5);
-    color: seagreen;
+    color: white;
+}
+.rectangle h2{
+    font-size: 50px;
+    text-align: left;
+    color: #82C232;
 }
 .pro img{
     border-radius: 50%;
-    width: 20%;
+    width: 40%;
 }
 .about-text{
     display: none;
+}
+.about-text h3 p{
+    text-align: left;
 }
 .team{
     width: 50%;
