--- a/css/style.css
+++ b/css/style.css
@@ -8,43 +8,46 @@ body{
     overflow-x: hidden;
 
 }
-#particles-js{
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: auto;
+
+canvas {
+    display: block;
+}
+  
+#particles-js {
+    position: absolute;
     width: 100%;
+    height: 100%;
+    background: #222629
 }
 
+.home{
+    position: relative;
+    height: 100vh;
+
+}
 /*HOME PAGE SECTION*/
-.home {
-    overflow-x: hidden;
-    background-color: #222629;
-}
-
 .title {
     color: #82C232;
     font-size: 23px;
 }
-
 .title1 {
     text-align: center;
     font-style: normal;
     font-weight: 300;
     color: #FFFFFF;
 }
-
 .description {
     font-style:normal;
     font-weight: 80;
     color: #FFFFFF;
 }
-
 .scroll {
     text-align: center;
     color: #FFFFFF;
 }
-
+.scroll-text{
+    color: white;
+}
 .fa-solid {
     color: #82C232  ;
 }
@@ -61,6 +64,7 @@ body{
 /* About Section */
 .banner{
     background-image: url("../assets/about-us.jpg");
+    background-size: cover;
     background-position: bottom ;
     margin: 0;
 }
@@ -68,6 +72,7 @@ body{
     width: 50vw;
     background-color: rgba(255, 255, 255, 0.5);
     color: white;
+    margin: 10px;
 }
 .about-title{
     float: right;
@@ -102,6 +107,11 @@ body{
 
 
 /* SELECTION PAGE */
+
+
+.selection{
+    position: relative;
+}
 
 .book-button{
    background-color: #82C232;
